--- a/brex.tex
+++ b/brex.tex
@@ -1,4 +1,17 @@
-\documentclass[acmsmall,review,anonymous]{acmart}
+\documentclass[sigplan,10pt,review,anonymous]{acmart}
+\settopmatter{printfolios=true,printccs=false,printacmref=false}
+
+%% For final camera-ready submission, w/ required CCS and ACM Reference
+%\documentclass[sigplan]{acmart}\settopmatter{}
+
+%% Conference information
+%% Supplied to authors by publisher for camera-ready submission;
+%% use defaults for review submission.
+\acmConference[PL'18]{ACM SIGPLAN Conference on Programming Languages}{January 01--03, 2018}{New York, NY, USA}
+\acmYear{2018}
+\acmISBN{} % \acmISBN{978-x-xxxx-xxxx-x/YY/MM}
+\acmDOI{} % \acmDOI{10.1145/nnnnnnn.nnnnnnn}
+\startPage{1}
 
 \def\techreport{1}
 
@@ -78,19 +91,7 @@ autogobble=true
 %% values in them; it is your responsibility as an author to replace
 %% the commands and values with those provided to you when you
 %% complete the rights form.
-\setcopyright{acmlicensed}
-\copyrightyear{2018}
-\acmYear{2018}
-\acmDOI{XXXXXXX.XXXXXXX}
-
-
-%%
-%% These commands are for a JOURNAL article.
-\acmJournal{JACM}
-\acmVolume{37}
-\acmNumber{4}
-\acmArticle{111}
-\acmMonth{8}
+\setcopyright{none}
 
 %%
 %% Submission ID.
@@ -99,34 +100,8 @@ autogobble=true
 %% of the event, and this ID should be used as the parameter to this command.
 %%\acmSubmissionID{123-A56-BU3}
 
-%%
-%% For managing citations, it is recommended to use bibliography
-%% files in BibTeX format.
-%%
-%% You can then either use BibTeX with the ACM-Reference-Format style,
-%% or BibLaTeX with the acmnumeric or acmauthoryear sytles, that include
-%% support for advanced citation of software artefact from the
-%% biblatex-software package, also separately available on CTAN.
-%%
-%% Look at the sample-*-biblatex.tex files for templates showcasing
-%% the biblatex styles.
-%%
-
-%%
-%% The majority of ACM publications use numbered citations and
-%% references.  The command \citestyle{authoryear} switches to the
-%% "author year" style.
-%%
-%% If you are preparing content for an event
-%% sponsored by ACM SIGGRAPH, you must use the "author year" style of
-%% citations and references.
-%% Uncommenting
-%% the next command will enable that style.
-%%\citestyle{acmauthoryear}
-
 \begin{document}
 
-%%
 %% The "title" command has an optional parameter,
 %% allowing the author to define a "short title" to be used in page headers.
 \title{Better Regexing with BREX -- A Modern Regex DSL}
@@ -145,16 +120,18 @@ autogobble=true
 %% The abstract is a short summary of the work to be presented in the
 %% article.
 \begin{abstract}
-Regular expressions (regexs) are a powerful and foundational programming features for string processing. Every mainstream language provides 
-builtin, and often specialized support for them. Emperical evidence suggests that regexs are widely used, appearing at least once in 
-one third of Python and JavaScript projects.  and are a critical tool for many
+Regular expressions (regexps) are a powerful and foundational tool for string progressing in programming languages. Almost without 
+exception, every modern programming language provides regex support as a primitive builtin. Empirical evidence indicates that these 
+features are widely and frequently used, \ie at least once in one third of Python or JavaScript projects. Despite this importance, 
+regexps are often difficult to write, read, and maintain. Developers often refer to them as ''read-only'' and experience shows they 
+are frequently the source of buggy application behavior. 
 
-Despite this importance, regexs are often difficult to write, read, and maintain. Developers often refer to them as ''read-only'' and 
-experience shows they are frequently the source of buggy application behavior. 
-Apochrphally -- you may think to yourself I have a problem, I'll use regexs, now I have two problems. 
-
-Despite these issues the DSL and core semantics of regexs in programming languages have remained largely unchanged since the 
-introduction of the xxx in the kkk and minorly extended into yyyy (PCRE) in the jjjs.
+In contrast to other language features, which have responded to high-value \& universally acknowleged difficulties with use by experimenting 
+with altering syntax and semantics for a feature, the sub-language for regexps is (almost) universal across programming languages. Languages 
+as diverse as Java, C++, Python, JavaScript, Haskell, all provide an almost identical (POSIX/PCRE) regex sub-language first introduced in 
+the 1980's (POSIX) and 1990's (PCRE)! This paper presents a new regex sub-language, BREX, which (1) addresses many of the issues identified 
+in existing regex languages/implementations and (2) introduce features that support the demands on structured text processing in modern 
+applications and programming languages.
 \end{abstract}
 
 %%
@@ -189,21 +166,34 @@ introduction of the xxx in the kkk and minorly extended into yyyy (PCRE) in the 
 \section{Introduction}
 The usual
 
-\section{PCRE Review}
+Despite this importance, and the variety of design choices in other aspects of programming languages, the regex 
+subset  
+
+
+  Regular expressions (regexs) are a powerful and foundational programming features for string processing. Every mainstream language provides 
+builtin, and often specialized support for them. Emperical evidence suggests that regexs are widely used, appearing at least once in 
+one third of Python and JavaScript projects.  and are a critical tool for many
+
+Despite this importance, regexs are often difficult to write, read, and maintain. Developers often refer to them as ''read-only'' and 
+experience shows they are frequently the source of buggy application behavior. 
+Apochrphally -- you may think to yourself I have a problem, I'll use regexs, now I have two problems. 
+
+Despite these issues the DSL and core semantics of regexs in programming languages have remained largely unchanged since the 
+introduction of the xxx in the kkk and minorly extended into yyyy (PCRE) in the jjjs.
 
 \section{Better Regexing}
 
-\subsection{Regex DSL Syntax}
+\subsection{Regex Syntax}
 
-\subsection{Regex DSL Semantics}
+\subsection{Regex Semantics}
 
 \subsection{Regex Engine}
 
-\section{Better Globbing}
+\section{Paths and Globs}
 
-\subsection{Glob DSL Syntax}
+\subsection{Path \& Glob Syntax}
 
-\subsection{Glob DSL Semantics}
+\subsection{Glob Semantics}
 
 \subsection{Glob Engine}
 
@@ -219,10 +209,6 @@ The usual
 
 \section{Onward!}
 
-\section*{Data-Availability Statement}
-This....
-
-
 %\begin{acks}
 %To Robert, for the bagels and explaining CMYK and color spaces.
 %\end{acks}
@@ -232,4 +218,3 @@ This....
 
 
 \end{document}
-\endinput
