--- a/brex.tex
+++ b/brex.tex
@@ -1,4 +1,4 @@
-\documentclass[sigplan,10pt,review,anonymous]{acmart}
+\documentclass[sigplan,10pt,review]{acmart}
 \settopmatter{printfolios=true,printccs=false,printacmref=false}
 
 %% For final camera-ready submission, w/ required CCS and ACM Reference
