--- a/globs/globs.tex
+++ b/globs/globs.tex
@@ -187,7 +187,9 @@ bridge the expressiveness gap between current implementations and developer requ
 \label{intro}
 \input{intro.tex}
 
-
+\section{Background}
+\label{background}
+\input{background.tex}
 
 \section{Section title}
 \label{sec:1}
