--- a/globs/globs.tex
+++ b/globs/globs.tex
@@ -191,6 +191,16 @@ bridge the expressiveness gap between current implementations and developer requ
 \label{background}
 \input{background.tex}
 
+\section{Research Questions}
+\label{sec:researchquestions}
+\input{rqs.tex}
+
+\section{Methodology}
+\label{sec:methodology}
+\input{methodology.tex}
+
+
+
 \section{Section title}
 \label{sec:1}
 Text with citations \cite{tiobe}.
