--- a/globs/methodology.tex
+++ b/globs/methodology.tex
@@ -7,8 +7,8 @@ databases. This multi-method approach enables us to establish both technical imp
 \subsection{Language and Environment Selection}
 
 We selected six environments that utilize glob patterns which represent diverse use-cases and implementation paradigms. Our primary selection criteria was covering the diverse set 
-of scenarios where globbing has been integrated into the ecosystem as a DSL. This selection is based primarially in the authors $15$ years of experience working with large software 
-companies, primarially Microsoft, and experience there with projects on build systems, programming language implementation, and cloud development. Scondarially, we used the TIOBE index 
+of scenarios where globbing has been integrated into the ecosystem as a DSL. This selection is based primarily in the authors $15$ years of experience working with large software 
+companies, primarily Microsoft, and experience there with projects on build systems, programming language implementation, and cloud development. Secondarily, we used the TIOBE index 
 to ensure we covered a diverse set of popular programming languages~\cite{tiobe}. The selected languages and their glob implementations are as follows: Bash (shell and file-system focused), 
 JavaScript/Node.js (URI and server routes + git usage)~\cite{typesciprtevol}, Go (both standard library with third-party extensions), PHP and Ruby (legacy web sites and contrasting 
 builtin vs library support), and Python (as a general purpose language). 
