--- a/globs/methodology.tex
+++ b/globs/methodology.tex
@@ -13,11 +13,20 @@ to ensure we covered a diverse set of popular programming languages~\cite{tiobe}
 JavaScript/Node.js (URI and server routes + git usage)~\cite{typesciprtevol}, Go (both standard library with third-party extensions), PHP and Ruby (legacy web sites and contrasting 
 builtin vs library support), and Python (as a general purpose language). 
 
-This set of languages captures a broad spectrum of glob usage patterns due to differences in application domain 
-focuses and tasks that developers commonly perform with globs. In addition, the implementations of globs in these languages vary significantly, in some cases being built-in language 
-features, while in others being provided through third-party libraries, and in some cases having multiple competing implementations of globs.
+\begin{itemize}
+    \item \textbf{Bash} was selected due to its foundational role in Unix-like operating systems and its extensive use in scripting and automation tasks that heavily interact with file 
+    system style operations.
+    \item \textbf{JavaScript/Node.js} was chosen for its ubiquity in modern web development, where glob patterns are frequently used for file management, build processes, and routing in 
+    frameworks like \emph{Express.js}.
+    \item \textbf{PhP and Ruby} were included to represent server-side web development environments where glob patterns are often utilized in file handling and asset management tasks. These 
+    languages also provide a contrast between built-in globbing capabilities (Ruby) and third-party library implementations (PHP).
+    \item \textbf{Go} was selected for its growing popularity in systems programming and cloud-native applications, where efficient file pattern matching is crucial. Go's standard library includes builtin 
+    globbing functionality, and is complemented by several third-party libraries that extend its capabilities.
+    \item \textbf{Python} was included due to its versatility and widespread adoption across various domains, including data science, web development, and automation. Globbing in Python 
+    is also implemented in multiple, slightly different ways, including the built-in \texttt{glob} module and \texttt{pathlibPath.glob()}.
+\end{itemize}
 
-For each language, we analyzed the canonical (or most popular $3^{\text{rd}}$ party) glob implementation: Python's \texttt{glob} module and \texttt{pathlib.Path.glob()}, 
+For each language, we analyzed the canonical (or popular $3^{\text{rd}}$ party) glob implementation: Python's \texttt{glob} and \texttt{pathlib.Path.glob()}, 
 Node.js's \texttt{glob} package (200+ million weekly downloads), Ruby's \texttt{Dir.glob()}, Go's \texttt{filepath.Glob()} with third-party alternatives, PHP's \texttt{glob()} 
 function, and Bash's native expansion. We conducted cross-platform testing on Linux, macOS, and Windows to evaluate semantic differences in case sensitivity, path separator handling, 
 and hidden file behavior.
@@ -28,38 +37,29 @@ We constructed a representative corpus through stratified sampling of $1,966$ ac
 meeting these criteria \todo{there were some review comments here about inconsistencies and details -- please address}:
 
 \begin{itemize}
-\item Primary language composition >50\% to ensure idiomatic usage
+\item Primary language composition $>50\%$ to ensure idiomatic usage
 \item Minimum 150 GitHub stars indicating community adoption
 \item Active maintenance (commits within preceding 12 months)
 \item Exclusion of archived or deprecated repositories
 \end{itemize}
 
+We utilized a suite of per-language regular expressions, included in the reproduction package, for extracting and analyzing glob usage. Post extraction we manually reviewed a random 
+sample of $150$ repositories to evaluate extraction accuracy. This validation showed a recall rate of $94\%$ and a precision rate of $99\%$.
+
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=\columnwidth]{language_prevalence.pdf}
-    \caption{Distribution of glob pattern usage across programming languages}
+    \caption{Distribution of glob pattern occurrence across programming languages. Fig. (a) shows the percentage of repositories containing at least on glob pattern. Fig. (b) 
+    reports the total number of globs extracted from repositories in each language.}
     \label{fig:language_prevalence}
 \end{figure}
-Our language selection strategy targeted six programming ecosystems representing diverse implementation approaches and application domains. As illustrated in~\Cref{fig:language_prevalence}, we observed significant variation in both repository penetration (the percentage of repositories containing glob patterns) and total pattern volume across languages. Python demonstrates the highest adoption with a number of $18,806$ of all extracted patterns, reflecting its prevalence in file-system-intensive domains like data science and scripting. Go follows with $17,798$, while Node.js, PHP, Ruby, and Shell show more modest but strategically important usage patterns. This distribution informed our stratified sampling approach, ensuring adequate representation of both high-volume ecosystems and specialized use cases while maintaining statistical power for cross-language comparison.
-The extraction employed a rigorous multi-phase process:
 
-\subsubsection{Initial Extraction and Refinement}
-We developed language-specific regular expressions targeting glob usage in both configuration files (\texttt{.gitignore}, build scripts) and source code. Initial extraction revealed three  systematic errors:
-
-\begin{enumerate}
-\item \textbf{False negatives (14\%)}: Missed patterns due to escaped metacharacters, template string interpolation, multi-line patterns
-\item \textbf{False positives (3\%)}: Inline comments, variable expansion, data structures mistaken as patterns
-\item \textbf{Ambiguities (1\%)}: Regular expressions resembling glob patterns, test assertion literals
-\end{enumerate}
-
-\subsubsection{Quality Control Implementation}
-We implemented a three-phase refinement process:
-
-\begin{enumerate}
-\item \textbf{Pattern cleaning}: A function stripped inline comments, filtered data structures, separated multiple patterns, and validated metacharacter presence
-\item \textbf{Feature disambiguation}: Negative lookbehind assertions distinguished brace expansion from variable expansion; simplified negation detection recognized any \texttt{!} usage
-\item \textbf{Validation}: Manual inspection (150 repositories) improved recall from 82\% to 94\% and achieved 99.9\% precision
-\end{enumerate}
+Our language selection strategy targeted six programming ecosystems representing diverse implementation approaches and application domains. 
+\Cref{fig:language_prevalence} shows significant variation in both repository penetration (the percentage of repositories containing glob patterns) 
+and total pattern volume across languages. Python demonstrates the highest adoption with a number of $18,806$ of all extracted patterns, reflecting 
+its prevalence in file-system-intensive domains like data science and scripting. Go follows with $17,798$, while Node.js, PHP, Ruby, and Shell show 
+more modest but strategically important usage patterns. This distribution informed our stratified sampling approach, ensuring adequate representation 
+of both high-volume ecosystems and specialized use cases while maintaining statistical power for cross-language comparison.
 
 \begin{figure}[htbp]
     \centering
@@ -68,15 +68,17 @@ We implemented a three-phase refinement process:
     \label{fig:source_comparison}
 \end{figure}
 
-\Cref{fig:language_prevalence} (b) shows the final corpus comprises $62,713$ validated patterns with distribution: Python $(29.99\%)$, JavaScript $(14.67\%)$, Go $(28.38\%)$, PHP $(6.08\%)$, Ruby $(12.79\%)$, Shell $(8.09\%)$. \Cref{fig:source_comparison} shows configuration files $(91.0\%)$ dominate source code use $(9.0\%)$.
+\Cref{fig:language_prevalence} (b) shows the final corpus comprises $62,713$ validated patterns with distribution: Python $(29.99\%)$, JavaScript $(14.67\%)$, 
+Go $(28.38\%)$, PHP $(6.08\%)$, Ruby $(12.79\%)$, Shell $(8.09\%)$. \Cref{fig:source_comparison} shows configuration files $(91.0\%)$ 
+dominate source code use $(9.0\%)$. \todo{xxx -- this is interesting -- even code uses like routes or resource management are often configuration too...}
 
 \subsection{Feature Detection and Classification}
 
-Each extracted pattern underwent automated analysis against a taxonomy of 13 features organized into three categories:
+Each extracted pattern underwent automated analysis against a taxonomy of $13$ features organized into three categories:
 
 \begin{enumerate}
 \item \textbf{Basic Matching}: Wildcard (\texttt{*}), recursive wildcard (\texttt{**}), single-character (\texttt{?}), character classes (\texttt{[]})
-\item \textbf{Advanced Patterns}: Brace expansion (\texttt{\{\}}), negation (\texttt{!}), extended glob operators, character ranges
+\item \textbf{Extended Patterns}: Brace expansion (\texttt{\{\}}), negation (\texttt{!}), extended glob operators, character ranges
 \item \textbf{Contextual Features}: Hidden files, absolute paths, directory qualifiers, escape characters, variable interpolation
 \end{enumerate}
 
