--- a/globs/bibliography.bib
+++ b/globs/bibliography.bib
@@ -275,58 +275,65 @@
     booktitle = {Proceedings of the 33rd ACM/IEEE International Conference on Automated Software Engineering}
 }
 
-@manual{BashGlob,
+@misc{BashGlob,
   title        = {Bash Globbing Reference},
   author       = {{The Linux Documentation Project}},
   organization = {The Linux Documentation Project (TLDP)},
-  url          = {https://tldp.org/LDP/abs/html/globbingref.html}
+  howpublished          = {\url{https://tldp.org/LDP/abs/html/globbingref.html}},
+  year = {2025}
 }
 
-@manual{NodeGlob,
+@misc{NodeGlob,
   title        = {glob - {Node.js} Package for Filesystem Globbing},
   author       = {Isaac Z. Schlueter and Contributors},
   organization = {npm, Inc.},
-  url          = {https://www.npmjs.com/package/glob},
-  version      = {11.0.1}
+  howpublished          = {\url{https://www.npmjs.com/package/glob}},
+  version      = {11.0.1},
+  year = {2025}
 }
 
-@manual{PHPGlob,
+@misc{PHPGlob,
   title        = {PHP: glob - Manual},
   author       = {{The PHP Documentation Group}},
   organization = {The PHP Group},
-  url          = {https://www.php.net/manual/en/function.glob.php}
+  howpublished = {\url{https://www.php.net/manual/en/function.glob.php}},
+  year = {2025}
 }
 
-@manual{PythonGlob,
+@misc{PythonGlob,
   title        = {Python 3 Documentation: glob — Unix style pathname pattern expansion},
   organization = {Python Software Foundation},
-  url          = {https://docs.python.org/3/library/glob.html}
+  howpublished = {\url{https://docs.python.org/3/library/glob.html}},
+  year = {2025}
 }
 
-@manual{PythonPathlib,
+@misc{PythonPathlib,
   title        = {Python 3 Documentation: pathlib — Object-oriented filesystem paths},
   organization       = {{Python Software Foundation}},
-  url          = {https://docs.python.org/3/library/pathlib.html}
+  howpublished = {\url{https://docs.python.org/3/library/pathlib.html}},
+  year = {2025}
 }
 
-@manual{PythonFnmatch,
+@misc{PythonFnmatch,
   title        = {Python 3 Documentation: fnmatch — Unix filename pattern matching},
   organization = {Python Software Foundation},
-  url          = {https://docs.python.org/3/library/fnmatch.html}
+  howpublished = {\url{https://docs.python.org/3/library/fnmatch.html}},
+  year = {2025}
 }
 
-@manual{GoGlob,
+@misc{GoGlob,
   title        = {glob - Vanadium Go Package},
   organization = {Vanadium Project},
-  url          = {https://pkg.go.dev/v.io/v23/glob},
-  version      = {v23}
+  howpublished = {\url{https://pkg.go.dev/v.io/v23/glob}},
+  year = {2025}
 }
 
-@manual{RubyGlob,
+@misc{RubyGlob,
   title        = {Ruby {Dir} Class: glob Method},
   organization = {Ruby Documentation Project},
-  url          = {https://ruby-doc.org/core-2.6.8/Dir.html},
-  version      = {2.6.8}
+  howpublished = {\url{https://ruby-doc.org/core-2.6.8/Dir.html}},
+  version      = {2.6.8},
+    year = {2025}
 }
 @article{regexBugs,
     author = {Wang, Peipei and Brown, Chris and Jennings, Jamie A. and Stolee, Kathryn T.},
