--- a/globs/methodology.tex
+++ b/globs/methodology.tex
@@ -54,6 +54,9 @@ sample of $150$ repositories to evaluate extraction accuracy. This validation sh
     \label{fig:language_prevalence}
 \end{figure}
 
+
+\subsection{Glob Frequency and Distribution}
+
 Our language selection strategy targeted six programming ecosystems representing diverse implementation approaches and application domains. 
 \Cref{fig:language_prevalence} shows significant variation in both repository penetration (the percentage of repositories containing glob patterns) 
 and total pattern volume across languages. Python demonstrates the highest adoption with a number of $18,806$ of all extracted patterns, reflecting 
@@ -64,29 +67,31 @@ of both high-volume ecosystems and specialized use cases while maintaining stati
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=\columnwidth]{source_comparison.pdf}
-    \caption{Source distribution of glob usage across open-source repositories}
+    \caption{Distribution of glob patterns by source file type, comparing configuration files (YAML, JSON, INI configs) versus language source code files across all studied languages. 
+    Across all languages The vast majority of glob patterns are found in configuration files.}
     \label{fig:source_comparison}
 \end{figure}
 
 \Cref{fig:language_prevalence} (b) shows the final corpus comprises $62,713$ validated patterns with distribution: Python $(29.99\%)$, JavaScript $(14.67\%)$, 
 Go $(28.38\%)$, PHP $(6.08\%)$, Ruby $(12.79\%)$, Shell $(8.09\%)$. \Cref{fig:source_comparison} shows configuration files $(91.0\%)$ 
-dominate source code use $(9.0\%)$. \todo{xxx -- this is interesting -- even code uses like routes or resource management are often configuration too...}
+dominate source code use $(9.0\%)$. This bias towards configuration contexts, along with the prevalent use of glob patterns in code to describe resources such as 
+file paths or URL routes, is notable and suggests that glob patterns are primarily employed for declarative resource specification rather that for search/replacement 
+style tasks that are seen with regular expressions (the most common structured text processing DSL).
 
-\subsection{Feature Detection and Classification}
+% After extraction each pattern was automatically classified, based on syntax and language semantic analysis, into a taxonomy of $13$ features organized into three categories:
 
-Each extracted pattern underwent automated analysis against a taxonomy of $13$ features organized into three categories:
+% \begin{enumerate}
+% \item \textbf{Basic Functionality}: Wildcard (\texttt{*}), recursive wildcard (\texttt{**}), single-character (\texttt{?}), character classes (\texttt{[]})
+% \item \textbf{Extended Patterns}: Brace expansion (\texttt{\{\}}), negation (\texttt{!}), extended glob operators, character ranges
+% \item \textbf{Environmental Functionality}: Hidden files, absolute paths, directory qualifiers, escape characters, variable interpolation
+% \end{enumerate}
 
-\begin{enumerate}
-\item \textbf{Basic Matching}: Wildcard (\texttt{*}), recursive wildcard (\texttt{**}), single-character (\texttt{?}), character classes (\texttt{[]})
-\item \textbf{Extended Patterns}: Brace expansion (\texttt{\{\}}), negation (\texttt{!}), extended glob operators, character ranges
-\item \textbf{Contextual Features}: Hidden files, absolute paths, directory qualifiers, escape characters, variable interpolation
-\end{enumerate}
-
-Feature detection employed context-sensitive regular expressions with disambiguation rules. For example, brace expansion detection used \verb|(?<!\$)\{([^}]+)\}| to exclude variable expansion. Validation on 500 randomly selected patterns achieved 100\% agreement with manual annotation.
+% Feature detection employed context-sensitive regular expressions with disambiguation rules. For example, brace expansion detection used \verb|(?<!\$)\{([^}]+)\}| to exclude variable expansion. Validation on 500 randomly selected patterns achieved 100\% agreement with manual annotation.
 
 \subsection{Qualitative Data Collection and Analysis}
 
-We collected 2,094 developer discussions \cite{githubissueempirical} from three complementary sources (2018-2024):
+Out qualitative data study utilizes 2,094 developer discussions from three complementary sources ranging from 2018-2024 to capture a broad spectrum of glob-related issues 
+involving usability, reliability, security, and performance concerns:
 
 \begin{itemize}
 \item \textbf{Stack Overflow}: $361$ questions revealing help-seeking behavior and conceptual difficulties
@@ -94,10 +99,11 @@ We collected 2,094 developer discussions \cite{githubissueempirical} from three 
 \item \textbf{CVE Database}: $444$ entries cataloging security vulnerabilities and exploits
 \end{itemize}
 
-Data collection used API scraping with keyword-based filtering (core: "glob", "wildcard"; feature-specific: "recursive glob", "brace expansion"; problem-specific: "glob error", "security") \cite{labelprediction}. Quality filters excluded low-score posts and duplicates.
+We performed API scraping with keyword-based filtering \texttt{(core: "glob", "wildcard"; feature-specific: "recursive glob", "brace expansion"; problem-specific: "glob error", "security")}~\cite{labelprediction}
+to collect relevant posts. Quality filters \todo{what filters??} excluded low-score posts and duplicates. The resulting corpus was manually reviewed to ensure topical relevance, yielding a final dataset of $2,160$ posts 
+which are included in the reproduction artifact.
 
-\subsubsection{Taxonomy Development}
-We developed a comprehensive issue taxonomy through iterative hybrid coding:
+Using an iterative hybrid coding approach, combining deductive and inductive methods outlined below, we developed a taxonomy of glob-related developer issues. 
 
 \begin{enumerate}
 \item \textbf{Deductive initial categories}: Derived from software engineering literature: Usability, Reliability, Security, Performance, Feature Gaps, Compatibility
@@ -106,5 +112,7 @@ We developed a comprehensive issue taxonomy through iterative hybrid coding:
 \item \textbf{Validation}: Analysis of "Other" categories confirmed taxonomy completeness despite natural heterogeneity in developer problem descriptions
 \end{enumerate}
 
-\subsection{Documentation and Implementation Review}
-We conducted systematic reviews of official documentation for all studied glob implementations \cite{BashGlob, GoGlob, RubyGlob, PythonFnmatch, PythonGlob, PythonPathlib, PHPGlob, NodeGlob}. This analysis identified documentation gaps, platform-specific behavior omissions, and evolutionary changes across library versions. For instance, we tracked Python's Unicode handling improvements from version $2$ to $3$ \cite{python2-3}, Node.js's recursive matching enhancements, and Bash's extended glob support in version $4.0+$.
+In addition to developer initiated discussion we also conducted an systematic review of the official documentation for all studied glob 
+implementations~\cite{BashGlob,GoGlob,RubyGlob,PythonFnmatch,PythonGlob,PythonPathlib,PHPGlob,NodeGlob}. This analysis identified documentation gaps, platform-specific 
+behavior omissions, and evolutionary changes across library versions. For instance, we tracked Python's Unicode handling improvements from version $2$ to 
+$3$~\cite{python2-3}, Node.js's recursive matching enhancements, and Bash's extended glob support in version $4.0+$.
