--- a/globs/globs.tex
+++ b/globs/globs.tex
@@ -199,7 +199,9 @@ bridge the expressiveness gap between current implementations and developer requ
 \label{sec:methodology}
 \input{methodology.tex}
 
-
+\section{Analysis}
+\label{sec:analysis}
+\input{analysis.tex}
 
 \section{Section title}
 \label{sec:1}
