--- a/globs/intro.tex
+++ b/globs/intro.tex
@@ -24,7 +24,7 @@ The contributions of this paper are as follows:
 \begin{itemize}
 \item We present a new polyglot glob dataset consisting of $62,713$ unique globs extracted from over $1,966$  software projects written in six popular programming languages.
 \item We empirically validate that glob use is widespread, with a core set of shared semantics \emph{but} also expose critical misalignments between language support and developer needs.
-\item We identify a set of common pitfalls, and characterize an emerging form of denial-of-service attacks, Glob Denial-of-Service(\gdos), providing a framework for systematic improvement.
+\item We identify a set of common pitfalls, and characterize an emerging form denial-of-service attacks, Glob Denial-of-Service(\gdos), providing a framework for systematic improvement.
 \item We propose and formalize \emph{GlobSpec}, a unified grammar and standard specification that establishes mathematical foundations for glob pattern matching, as a path toward resolving the expressiveness and standardization gaps our study uncovered.
 \end{itemize}
 
