--- a/globs/globs.tex
+++ b/globs/globs.tex
@@ -203,54 +203,30 @@ bridge the expressiveness gap between current implementations and developer requ
 \label{sec:analysis}
 \input{analysis.tex}
 
-\section{Section title}
-\label{sec:1}
-Text with citations \cite{tiobe}.
-\subsection{Subsection title}
-\label{sec:2}
-as required. Don't forget to give each section
-and subsection a unique label.
-\paragraph{Paragraph headings} Use paragraph headings as needed.
-\begin{equation}
-a^2+b^2=c^2
-\end{equation}
+\section{Discussion}
+\label{sec:discussion}
+\input{discussion.tex}
 
-% For one-column wide figures use
-\begin{figure}
-% Use the relevant command to insert your figure file.
-% For example, with the graphicx package use
-  \includegraphics{example.eps}
-% figure caption is below the figure
-\caption{Please write your figure caption here}
-\label{fig:1}       % Give a unique label
-\end{figure}
-%
-% For two-column wide figures use
-\begin{figure*}
-% Use the relevant command to insert your figure file.
-% For example, with the graphicx package use
-  \includegraphics[width=0.75\textwidth]{example.eps}
-% figure caption is below the figure
-\caption{Please write your figure caption here}
-\label{fig:2}       % Give a unique label
-\end{figure*}
-%
-% For tables use
-\begin{table}
-% table caption is above the table
-\caption{Please write your table caption here}
-\label{tab:1}       % Give a unique label
-% For LaTeX tables use
-\begin{tabular}{lll}
-\hline\noalign{\smallskip}
-first & second & third  \\
-\noalign{\smallskip}\hline\noalign{\smallskip}
-number & number & number \\
-number & number & number \\
-\noalign{\smallskip}\hline
-\end{tabular}
-\end{table}
+\section{Threats to Validity}
+\label{sec:threats}
+\input{threats.tex}
 
+\section{Related Work}
+\label{sec:relatedwork}
+\input{related.tex}
+
+\section{Conclusion}
+This study provides the first comprehensive analysis of globbing features across programming languages, highlighting inconsistencies, limitations, and areas for improvement. By 
+examining real-world usage and cross-platform challenges, we identify the need for standardized implementations and enhanced developer tools to address portability and usability issues.
+While globbing is a convenient mechanism for matching file paths, multiple vulnerabilities suggest it can become a surprising attack surface. We highlight Glob-Driven Denial-of-Service 
+(\gdos) attacks as an emerging class of vulnerabilities where misuse of glob syntax or poor implementation leads to resource exhaustion, memory leaks, or crashes. Additionally, 
+this work proposes a standardization for glob languages that unifies and simplifies many challenges present with existing globbing systems.
+These findings lay the groundwork for better practices, opportunities for enhancements to the design, and standardization of globbing semantics, ultimately aiming to provide developers 
+with robust, portable, and reliable capabilities. 
+
+\section*{Data-Availability Statement}
+The data used in this study, including the glob corpus, forum posts, and CVE issues is available via github (\url{xxxx}) as an evolving community data set and as a stable 
+reproduction package at \todo{yyy} (\url{zzz}).
 
 %\begin{acknowledgements}
 %If you'd like to thank anyone, place your comments here
@@ -271,6 +247,8 @@ number & number & number \\
 %\bibliographystyle{spbasic}      % basic style, author-year citations
 %\bibliographystyle{spmpsci}      % mathematics and physical sciences
 %\bibliographystyle{spphys}       % APS-like style for physics
+
+\newpage
 
 \bibliographystyle{spbasic}
 \bibliography{bibliography}
