--- a/globs/globs.tex
+++ b/globs/globs.tex
@@ -99,7 +99,7 @@ literate= {á}{{\'a}}1
     sensitive=false,
     morecomment=[l]{//},
     morecomment=[s]{/*}{*/},
-    morestring=[b]",
+    escapeinside={(@}{@)},
 }
 \lstset{
     basicstyle=\ttfamily\small,
